--- a/communifyapp/templates/communifyapp/home.html
+++ b/communifyapp/templates/communifyapp/home.html
@@ -1,1 +1,11 @@
-<h1>This is the home page</h1>
+{% extends 'communifyapp/base.html' %}
+
+    {%  block content %}
+          <h2>This is the home page</h2> 
+        {%  if user.is_authenticated %}
+            <p>You are logged in as {{ request.user }}. Click here to <a href="{% url 'logout' %}">log out</a></p>
+
+        {%else%}
+            <p>Click here to <a href="{% url 'login' %}">login</a></p>
+        {% endif %} 
+    {% endblock content %}
