Posts can be created, updated and deleted now. Work is still being done of the comment section

--- a/communifyapp/templates/communifyapp/base.html
+++ b/communifyapp/templates/communifyapp/base.html
@@ -9,6 +9,8 @@
   <form method = "POST" >
     {% csrf_token %}
     {{form.as_p}}
+    <h1> communifyapp</h1>
+    {% block content %}{% endblock content%}
 
     <button type="submit">Submit</button>
   </form>
