--- a/communifyapp/templates/authentication/login.html
+++ b/communifyapp/templates/authentication/login.html
@@ -1,7 +1,11 @@
+{% extends 'communifyapp/base_login.html' %}
 
+{%block content%}
     <p>{{ message }}</p>
     <form method="post" action="{% url 'login' %}">
         {{ form.as_p }}
         {% csrf_token %}
         <button type="submit" >Submit</button>
     </form>
+
+{% endblock content%}
