--- a/communifyapp/templates/communifyapp/home.html
+++ b/communifyapp/templates/communifyapp/home.html
@@ -1,11 +1,33 @@
-{% extends 'communifyapp/base.html' %}
+{% extends 'communifyapp/base_home.html' %}
 
-    {%  block content %}
-          <h2>This is the home page</h2> 
-        {%  if user.is_authenticated %}
-            <p>You are logged in as {{ request.user }}. Click here to <a href="{% url 'logout' %}">log out</a></p>
+{%  block content %}
 
-        {%else%}
-            <p>Click here to <a href="{% url 'login' %}">login</a></p>
-        {% endif %} 
+
+<div class="text-center">
+    <strong class="text-center">Posts</strong>
+</div>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    {% for post in posts %}
+    <div class="col-3"></div>
+    <div class="col-6">
+        <div class="card h-100">
+            <div class="card-body">
+                <img class="rounded-circle mr-2" src="/media/{{  profile_image }}" alt="profile_image"
+                     width="20"
+                     height="20">
+                <strong class="card-title">{{user.username}} </strong> said
+                <p class="card-text">{{ post.text }}</p>
+                <p class="m-1 mt-3">{{ post.image }}</p>
+                <a href="{% url 'post' post.id %}" class="btn btn-primary btn-sm">Post Detail</a>
+            </div>
+            <div class="card-footer">
+                <small class="text-body-secondary">{{ post.date }}</small>
+            </div>
+        </div>
+    </div>
+    <div class="col-3"></div>
+    {% endfor %}
+
+
     {% endblock content %}
