--- a/communifyapp/templates/communifyapp/base_login.html
+++ b/communifyapp/templates/communifyapp/base_login.html
@@ -31,7 +31,7 @@
 
         <!-- Main content -->
 
-        <div class="content bg-body-tertiary">
+        <div class="content bg-body-tertiary"  style="padding-top: 10rem; padding-bottom:10rem; ">
             <div class="row">
                 <div class="col">
                     {% block content %}
@@ -42,10 +42,14 @@
         </div>
     </div>
 </main>
-<footer class="footer mt-auto py-3 bg-body-tertiary">
-    <div class="container">
-        <span class="text-body-secondary">Place sticky footer content here.</span>
+<footer class="footer mt-auto py-3 bg-body-tertiary fixed-bottom">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Communify, Inc</span>
     </div>
+
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
