--- a/communifyapp/templates/communifyapp/commentpost.html
+++ b/communifyapp/templates/communifyapp/commentpost.html
@@ -1,73 +1,35 @@
 {% extends 'communifyapp/base_login.html' %}
 
-    {%  block content %}
-            <div class="row mt-5">
-              <div class="col-lg-6 offset-lg-3 mt-2">
-                  <div class="card p-2">
-                    <div class="row">
-                      <div class="col-12">
-                        <img class="rounded-circle mr-2"  alt="Avatar">
-                        <strong>{{ post.name }}</strong> said
-                      </div>
-                        {% csrf_token %}
-
-                        <div class="mb-3 text-center">
-                            <label for="{{ form.username.id_for_label }}" >Post ID:</label>
-                            {{ form.instance.post_id }}
-                        </div>
-
-                        <div class="mb-3 text-center">
-                            <label for="{{ form.email.id_for_label }}">Comment</label>
-                            {{ form.content }}
-                        </div>
-
-                        <div class="mb-3 text-center">
-                            <label for="{{ form.password.id_for_label }}">Your Name</label>
-                            {{ form.name }}
-                        </div>
-
-
-                      <div class="col-12">
-                        <p class="m-1 mt-3">{{ post.text }}</p>
-                        <p class="text-right text-muted"><small>{{ post.date }}</small></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-            </div>
- <button class="btn btn-outline-info mb-3 d-block mx-auto" type="submit">Create Post</button>
-    {% endblock content %}
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
+{%  block content %}
+<div class="row mt-5">
     <div class="col-lg-6 offset-lg-3 mt-2">
-      <div class="card p-2">
-        <div class="row">
-          <div class="col-12">
-            <img class="rounded-circle mr-2"  alt="Avatar">
-            <strong>{{ post.name }}</strong> said
-          </div>
-          <div class="col-12">
-            <p class="m-1 mt-3">{{ post.text }}</p>
-            <p class="text-right text-muted"><small>{{ post.date }}</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create Post</button>
-    </form>
-</body>
-</html>
+        <div class="card p-2">
+            <div class="row">
+                <div class="col-12">
+                    <p><strong>{{ post.text }}</strong></p>
+                    <img src="/media/{{ post.image }}" class="card-img-top" alt="...">
+                </div>
+                <form method='POST'>
+                    {% csrf_token %}
 
+                    <div class="mb-3 text-center">
+                        <p><strong>Add your comment</strong></p>
+                    </div>
+
+                    <div class="mb-3 text-center">
+                        <label for="{{ form.name.id_for_label }}">Your Name:</label>
+                        {{ form.name }}
+                    </div>
+                    <div class="mb-3 text-center">
+                        <label for="{{ form.content.id_for_label }}">Comment:</label>
+                        {{ form.content }}
+                    </div>
+                    <button class="btn btn-primary ml-2" type="submit">Comment</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <a href="{% url 'home' %}">Back to Home</a>
+</div>
+
+{% endblock content %}
