--- a/communifyapp/templates/communifyapp/signup.html
+++ b/communifyapp/templates/communifyapp/signup.html
@@ -1,53 +1,96 @@
-{% extends 'communifyapp/base_login.html' %}
-{% comment %} {% crispy example_form example_form.helper %} {% endcomment %}
-{% comment %} {% load crispy_forms_tags %} {% endcomment %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Communify</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+    <link href="{% static 'communifyapp/base.css' %}" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
 
-    {%  block content %}
-        {% comment %} <form action="{% url 'login' %}" method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <input type="submit" value="Submit">
-        </form> {% endcomment %}
-    {% comment %} <div class="content-section">
-         
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-            </small>
+<body class="d-flex flex-column  min-vh-100">
+
+
+<main class="d-flex flex-fill content">
+    <div class="flex-grow-1">
+
+
+        <!-- Main content -->
+
+
+        <div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5"
+             tabindex="-1"
+             role="dialog" id="modalSignin">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content rounded-4 shadow">
+                    <div class="modal-header p-5 pb-4 border-bottom-0">
+                        <h1 class="fw-bold mb-0 fs-2">Sign up</h1>
+                    </div>
+
+                    <div class="modal-body p-5 pt-0">
+                        <form action="{% url 'signup' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control rounded-3"
+                                       id="username" name="username"
+                                       placeholder="John Doe">
+                                <label for="username">Username</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control rounded-3"
+                                       id="email" name="email"
+                                       placeholder="name@example.com">
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="password" class="form-control rounded-3"
+                                       id="password" name="password1"
+                                       placeholder="Password">
+                                <label for="password">Password</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="password" class="form-control rounded-3"
+                                       id="confirm_password" name="password2"
+                                       placeholder="Confirm Password">
+                                <label for="confirm_password">Confirm Password</label>
+                            </div>
+                            {% if message %}
+                            <p class="text-center">{{message}}</p>
+                            {% endif%}
+                            {% if messages %}
+                            <ul class="alert alert-danger" style="list-style: none;">
+                                {% for message in messages %}
+                                <li
+                                {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                            {% endif %}
+                            <button class="w-100 mb-2 btn btn-lg rounded-3 btn-warning"
+                                    type="submit">Sign up
+                            </button>
+                            <hr class="my-4">
+                            <h2 class="fs-5 fw-bold mb-3">Or <a href="{% url 'login' %}">Login</a></h2>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div> {% endcomment %}
-     <form action="{% url 'signup' %}" method="POST">
-        {% csrf_token %}
-            {{ form.as_p}}
-        <button class="btn btn-outline-info mb-3 d-block mx-auto" type="submit">Sign Up</button>
-    </form>
-         {% if form.errors %}
-              <div class="alert alert-danger">
-                {{ form.errors }}
-              </div>
-        {% endif %}
-        {% comment %} <div class="mb-3 text-center">
-            <label for="{{ form.username.id_for_label }}" >Username:</label>
-            {{ form.username }}
-        </div>
-
-        <div class="mb-3 text-center">
-            <label for="{{ form.email.id_for_label }}">Email:</label>
-            {{ form.email }}
-        </div>
-
-        <div class="mb-3 text-center">
-            <label for="{{ form.password.id_for_label }}">Password:</label>
-            {{ form.password1 }}
-        </div>
-
-        <div class="mb-3 text-center"">
-            <label for="{{ form.password.id_for_label }}">Confirm Password:</label>
-            {{ form.password2 }}
-        </div> {% endcomment %}
 
 
-    
-    
-     
-    {% endblock content %}
+    </div>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
+
